feat: thumbnail
